# vrcx2trakt

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  release.yml
packaging/: build-windows.ps1  launcher_cli.py  launcher_gui.py  vrcx2trakt-cli.spec  vrcx2trakt-gui.spec
scripts/: auto_sync.ps1  auto_sync.sh
src/vrcx2trakt/: __init__.py  cli.py  config.py  extract.py  gui.py  match.py  push.py  trakt_client.py  wizard.py
tests/: test_config.py  test_extract.py
